// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Favorite matches snapshot - Add state 1`] = `
<InteractiveElement
  className="favorite-container "
  onClick={[Function]}
  style={
    Object {
      "pointerEvents": "inherit",
    }
  }
  title="Add to Favorites"
  type="div"
>
  <FontAwesome
    name="heart-o"
  />
   
  Favorite
</InteractiveElement>
`;

exports[`Favorite matches snapshot - Remove state 1`] = `
<InteractiveElement
  className="favorite-container "
  onClick={[Function]}
  style={
    Object {
      "pointerEvents": "inherit",
    }
  }
  title="Remove from Favorites"
  type="div"
>
  <FontAwesome
    name="heart"
  />
   
  Remove
</InteractiveElement>
`;
